// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader example 0: example-styles.less 1`] = `
"
  .foo {
    color: red;
    width: 75px;
  }

  .bar {
    composes: foo;

    font-weight: bold;
    font-style: italic;
  }
"
`;

exports[`Loader example js : Compiled JS 1`] = `
"import { css as less } from 'css-literal-loader/styled';

const SIZE = 75;

const styles = require('./example-styles.less');
"
`;

exports[`Loader hoist-import 0: hoist-import-ButtonBase.css 1`] = `
"@import '~./styles/mixins.scss';
.button-base {

  

  display: inline-flex;
  align-items: center;
  justify-content: center;
  border: 1px solid transparent;

}"
`;

exports[`Loader hoist-import js : Compiled JS 1`] = `
"import { styled } from 'css-literal-loader/styled';

const ButtonBase = styled('button', \\"ButtonBase\\", require(\\"./hoist-import-ButtonBase.css\\"), s => [s[\\"buttonBase\\"] || s[\\"button-base\\"]]);
"
`;

exports[`Loader multiple-components 0: multiple-components-FancyBox.css 1`] = `
".fancy-box {

  color: red;
  width: 75px;

  @media (min-width: 420px) {
		width: 96px;
		height: 96px;
	}

  

}
.fancy-box-variant-0 {

    background: white;
    color: palevioletred;
  
}"
`;

exports[`Loader multiple-components 1: multiple-components-FancyHeader.css 1`] = `
".fancy-header {

  color: red;
  width: 75px;

  ;

}
.fancy-header-variant-1 {

      background: white;
      color: palevioletred;
    
}"
`;

exports[`Loader multiple-components js : Compiled JS 1`] = `
"import { styled, css } from 'css-literal-loader/styled';

const SIZE = 75;

// prettier-ignore
const FancyBox = styled('div', \\"FancyBox\\", require(\\"./multiple-components-FancyBox.css\\"), s => [s[\\"fancyBox\\"] || s[\\"fancy-box\\"], props => props.primary && (s[\\"fancyBoxVariant0\\"] || s[\\"fancy-box-variant-0\\"])]);

const FancyHeader = styled('h2', \\"FancyHeader\\", require(\\"./multiple-components-FancyHeader.css\\"), s => [s[\\"fancyHeader\\"] || s[\\"fancy-header\\"], props => props.primary && (s[\\"fancyHeaderVariant1\\"] || s[\\"fancy-header-variant-1\\"])]);
"
`;

exports[`Loader no-global js : Compiled JS 1`] = `
"const SIZE = 75;

const styles = less\`
  .foo {
    color: red;
    width: \${SIZE}px;
  }

  .bar {
    composes: foo;

    font-weight: bold;
    font-style: italic;
  }
\`;
"
`;

exports[`Loader styled 0: styled-FancyBox.css 1`] = `
".fancy-box {

  color: red;
  width: 75px;

  @media (min-width: 420px) {
		width: 96px;
		height: 96px;
	}

  

}
.fancy-box-variant-0 {

    background: white;
    color: palevioletred;
  
}"
`;

exports[`Loader styled 1: styled-FancierBox.css 1`] = `
".fancier-box {

  color: ultra-red;

}"
`;

exports[`Loader styled js : Compiled JS 1`] = `
"import { styled, css } from 'css-literal-loader/styled';

const SIZE = 75;

// prettier-ignore
const FancyBox = styled('div', \\"FancyBox\\", require(\\"./styled-FancyBox.css\\"), s => [s[\\"fancyBox\\"] || s[\\"fancy-box\\"], props => props.primary && (s[\\"fancyBoxVariant0\\"] || s[\\"fancy-box-variant-0\\"])]);

const FancierBox = styled(FancyBox, \\"FancierBox\\", require(\\"./styled-FancierBox.css\\"), s => [s[\\"fancierBox\\"] || s[\\"fancier-box\\"]]);
"
`;

exports[`Loader with-props 0: with-props-RedPasswordInput.css 1`] = `
".red-password-input {

  background-color: red;

}"
`;

exports[`Loader with-props js : Compiled JS 1`] = `
"import { styled } from 'css-literal-loader/styled';
import withProps from 'recompose/withProps';

const RedPasswordInput = withProps({
  type: 'password',
})(styled('input', \\"RedPasswordInput\\", require(\\"./with-props-RedPasswordInput.css\\"), s => [s[\\"redPasswordInput\\"] || s[\\"red-password-input\\"]]));
"
`;
